# computer-setup

./: CMakeLists.txt  eigenvulkan.cpp  setup.sh  xr_linear.h
cube/: CMakeLists.txt  cube.cpp  linmath.h  pch.h
src/: CMakeLists.txt  head.txt  in.txt
src/math/: CMakeLists.txt  eigengame.cpp  eigenvulkan.cpp  main.cpp
src/offscreen/: ArcCamera.cpp  ArcCamera.h  CMakeLists.txt  ImageBuffer.cpp  ImageBuffer.h  OffScreen.cpp  OffScreen.h  VkBundle.cpp  VkBundle.h
